Fixed sizing for comment/reply boxes and buttons on mobile newsfeed

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -179,8 +179,8 @@
     display: none;
     position: absolute;
     font-size: 1em;
-    top: 105px;
-    left: 140px;
+    top: 100px;
+    left: 120px;
     padding: 20px;
     background-color: #111;
     border: 1px solid #444;
