--- a/static/css/news.css
+++ b/static/css/news.css
@@ -555,4 +555,33 @@ p {
     .news-right {
         width: 100%;
     }
+
+    .news-right textarea[name="comment-content"] {
+        min-width: 0;
+        max-width: 2200px;
+        max-height: 100px;
+        min-height: 0;
+    }
+
+    .newsfeed-button {
+        background-color: #1a1a1a;
+        border: 3px solid #00e3ea;
+        color: #00e3ea;
+        padding: 2px 12px;
+        margin-left: 0;
+        font-size: .9em;
+        border-radius: 999px;
+        cursor: pointer;
+        transition: color 0.2s ease;
+        text-decoration: none;
+        white-space: normal;
+        overflow-wrap: normal;
+        word-break: normal;
+        text-align: center;
+        max-width: 100px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+}
+    
 }
